Change Log for OpenResty

0.5.10 May 21 2009
* added a sample custom handler class OpenResty::Handler::Shell.
* added the "openresty" mailing list page to the POD.

0.5.9 May 6 2009
* updated CheatSheet.pod to reflect the latest OpenResty API.

0.5.8 May 6 2009
* added support for frontend.unlimited config directive, which lists the OpenResty accounts without ordinary limits. (xunxin)
* now we use dist_dir rather than module_dir in shared stuff locating. (agentzh)

0.5.7 May 4 2009
* added missing files to MANIFEST.

0.5.6 May 3 2009
* added docs OpenResty::Spec::Install::Apache and OpenResty::Spec::Install::Lighttd.

0.5.5 May 1 2009
* updated the source repos to the new GitHub address.
* fixed the encoding name in GettingStarted_cn.pod.

0.5.4 May 1 2009
* now we honor the FastCGI protocol and send the Status header to the fastcgi manager. [agentzh]
* updated the RSS links in the blog demo sites. [agentzh]
* now we drop model in the cascaded fashion. [agentzh]
* added applied_to column to _access table so that we can add ACL rules containing ip address validations. [xunxin]
* replaced JSON::XS with JSON::Syck module in import-model.pl to allow loose JSON syntax in input data files. [xunxin]
* implemented captcah+password login method and the test file t/55-login-by-captchapassword.t for it. [xunxin]
* now we can add OpenResty account by --wrap-legacy option to reuse legacy Pg schemas insteading creating new ones. [xunxin]
* now we support no limit accounts. [xunxin]
* minor performance tuning by eliminating some unnecessary DB queries. [xunxin]
* replaced Cache::Memcached::Fast by Cache::Memcached::libmemcached because the former might miss existing keys when access rate is very high. [xunxin]
* minor UI fix in the Admin site for IE. [xunxin]
* preliminary support for compiled actions. [xunxin]

0.5.3 Nov 30 2008
* switched the license from GPLv2 to BSD.
* updated demo/Blog/script/init.pl to use the new column default value syntax.