@@ -4,7 +4,7 @@ OpenResty::Spec::MetaModel - Metamodel for OpenResty backends
 
 =head1 VERSION
 
-This document describes OpenResty 0.5.9's meta model, version 0.009.
+This document describes OpenResty 0.5.10's meta model, version 0.009.
 
 =head1 DESCRIPTION
 
